# EV-Simulator

./: CMakeLists.txt  Main.qml  main.cpp  vehiclesimulator.cpp  vehiclesimulator.h
backend/: vehiclesimulator.cpp  vehiclesimulator.h
ui/: BatteryCard.qml  CenterScreen.qml  Main.qml  Seats.qml  Settings.qml  SpeedCard.qml  VolumeSlider.qml
